add_subdirectory(CommonTools)

if (NOT MINGW)
  if (BUILD_FEXCONFIG)
    find_package(Qt6 COMPONENTS Qml Quick Widgets QUIET)
    if (Qt6_FOUND)
      set(QT_VERSION_MAJOR 6)
    else()
      set(QT_VERSION_MAJOR 5)
      find_package(Qt5 COMPONENTS Qml Quick Widgets REQUIRED)
    endif()

    add_subdirectory(FEXConfig/)
  endif()

  if (ENABLE_GDB_SYMBOLS)
    add_subdirectory(FEXGDBReader/)
  endif()

  if (NOT BUILD_STEAM_SUPPORT)
    add_subdirectory(FEXRootFSFetcher/)
  endif()

  add_subdirectory(FEXGetConfig/)
  add_subdirectory(FEXServer/)
  add_subdirectory(FEXBash/)
  add_subdirectory(FEXOfflineCompiler/)
  add_subdirectory(CodeSizeValidation/)
  add_subdirectory(LinuxEmulation/)

  add_subdirectory(FEXInterpreter/)
  add_subdirectory(pidof/)
  if (BUILD_TESTING)
    add_subdirectory(TestHarnessRunner/)
  endif()
endif()
